Lab Assignment 2.ipynb

--- a/Lab-A2/Lab Assignment 2.ipynb
+++ b/Lab-A2/Lab Assignment 2.ipynb
@@ -148,36 +148,36 @@
     "VADER (Lexicon-based Approach)\n",
     "Strengths:\n",
     "\n",
-    "No training needed: VADER doesn’t need training data, so it’s easy to use right away.\n",
+    "> Data can be used as it is as VADER does not require to training to understand the data.\n",
     "\n",
-    "Fast: It works quickly, making it great for real-time analysis like social media posts.\n",
+    "> Ideal for real time analysis as it operates smoothly especially for posts in social medias.\n",
     "\n",
-    "Good for informal text: It handles slang, emojis, and short text well.\n",
+    "> It can process and understand informal texts such as emojis, slangs and any words that have been short formed.\n",
     "\n",
     "Weaknesses:\n",
     "\n",
-    "Limited to predefined rules: It can’t adjust to specific topics or new words.\n",
+    ">> It will classify incorrectly where negative reviews are seen to be positive and vice versa. \n",
     "\n",
-    "Struggles with neutral text: VADER often misclassifies neutral reviews.\n",
+    ">> VADER may misinterpret reviews that are neither good or bad\n",
     "\n",
-    "False positives: It might wrongly label some negative or neutral reviews as positive.\n",
+    ">> VADER cannot comprehend new words or specific topics as it had limited rules. \n",
     "\n",
     "Logistic Regression (Machine Learning Approach)\n",
     "Strengths:\n",
     "\n",
-    "Learns from data: Logistic Regression improves as it learns from labeled data.\n",
+    "> Logistic Regression has no problem in understanding complex trends and patterns in texts. \n",
     "\n",
-    "Handles complex relationships: It can understand complex patterns in text.\n",
+    "> Can perform better by learning all the labeled datas and samples.\n",
     "\n",
-    "Balanced: It provides a good balance between precision and recall.\n",
+    "> Can offer strong balance between both precision & recall\n",
     "\n",
     "Weaknesses:\n",
     "\n",
-    "Needs labeled data: It requires a lot of data to train, which takes time.\n",
+    ">> Logistic Regression can be time consuming as it needs large amount of data to train. \n",
     "\n",
-    "Hard for neutral sentiment: It doesn’t perform as well for neutral sentiments.\n",
+    ">> Model will have difficulties if data is not standardized and formatted properly. \n",
     "\n",
-    "Sensitive to noise: If the data is messy, the model may struggle."
+    ">> It may be challenging in handling neutral sentiments."
    ]
   }
  ],
